# Excel-Agent-MCP

./: .gitignore  README.md  SKILL_README.md  pyproject.toml  skill_install.md
.agents/skills/: excel-mcp
.codex/: config.toml.example
claude_deepseek_two_agent/: .gitignore  claude_invocation.py  excel_cleanup.py  main.py  orchestrator.py  run_cleanup.py  trace.py
claude_deepseek_two_agent/mini_test/: probe_trace_capture.py
excel_mcp_skill/: SKILL.md
excel_mcp_skill/agents/: openai.yaml
excel_mcp_skill/references/: get_range.md  get_sheet_state.md  local_screenshot.md  open_workbook.md  recalculate.md  set_range.md  spreadsheet_guidelines.md  trace_formula.md  workflow.md
multi_agent_framework/: README.md  agent.py  config.py  event_bus.py  orchestrator.py  runner.py
src/excel_mcp/: __init__.py  __main__.py  helpers.py  server.py  service.py  types.py
src/extern_service/tacolens/: README.md
src/extern_service/tacolens/web-server/: Dockerfile
tests/: test_agent_stream.py  test_e2e.py  test_helpers.py  test_orchestrator_cleanup.py  test_orchestrator_workbook_dir.py  test_prompt_context.py  test_server.py  test_sheet_screenshot_service.py  test_two_agent_config_openrouter_wire_api.py  test_two_agent_trace_passthrough.py  test_two_agent_worker_prompt.py
two_agent_framework/: README.md  agent.py  config.py  event_bus.py  excel_lifecycle.py  minimal_impl_write_probe.py  orchestrator.py  runner.py
