[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-mcp"
version = "0.1.0"
description = "Lightweight MCP server for live Excel workbook interaction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "formulas",
  "mcp",
  "openpyxl",
  "Pillow",
  "PyMuPDF",
  "xlwings",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
excel-mcp = "excel_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]
